# android-toolchain-build

./: Makefile.in  README  build-sysroot.sh  clear_header.sh  config.sub  configure  configure.ac
dejagnu/: android-dejagnu.exp
dejagnu/boards/: android-adb.exp
